Use a baseUrl in vue-router to make routing work when embedded in molgenis

--- a/gene-network/src/main/frontend/index.html
+++ b/gene-network/src/main/frontend/index.html
@@ -10,7 +10,8 @@
     <script>
       window.__INITIAL_STATE__ = {
         diagnosticsPackageId:  'aaaacw7mmto3rfrbucrmpnqaae',
-        matrixEntityId: 'test'
+        matrixEntityId: 'test',
+        baseUrl: 'localhost:3000'
       }
     </script>
   </body>
