Add Home screen

--- a/gene-network/src/main/frontend/index.html
+++ b/gene-network/src/main/frontend/index.html
@@ -11,7 +11,7 @@
       window.__INITIAL_STATE__ = {
         diagnosticsPackageId:  'aaaacw7mmto3rfrbucrmpnqaae',
         matrixEntityId: 'test',
-        baseUrl: 'localhost:3000'
+        baseUrl: '/'
       }
     </script>
   </body>
