set default settings to correspond with server

--- a/gene-network/src/main/frontend/index.html
+++ b/gene-network/src/main/frontend/index.html
@@ -9,8 +9,8 @@
     <!-- built files will be auto injected -->
     <script>
       window.__INITIAL_STATE__ = {
-        diagnosticsPackageId:  'aaaacw7r3vz7edudz2bjf7yaae',
-        matrixEntityId: 'diagnostics',
+        diagnosticsPackageId:  'diagnostics',
+        matrixEntityId: 'gene_network_matrix_id',
         baseUrl: '/'
       }
     </script>
